# agente-en-openwebUI

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  agent-manifest.yaml  docker-compose.yml  pyproject.toml  railway.toml  register_agent.py  requirements.txt  streamlit_app.py  system_prompt.py
.claude/skills/: .gitkeep
.mlops/: airflow.yaml.example  secrets.yaml
.mlops/autodeploy/: config.yaml
src/e2e_test_agent6/: agent.py  app.py  config.py  openai_adapter.py  tracing.py
src/e2e_test_agent6/routes/: chat.py  health.py  models.py
tests/: test_app.py
