[project]
name = "e2e-test-agent6"
version = "0.1.0"
description = "es una prueba"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.68",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "langfuse>=4.5.1",
    "langsmith[claude-agent-sdk,otel]>=0.7.37",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/e2e_test_agent6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: end-to-end test against real Anthropic (skipped in CI)",
]
addopts = "-ra"
